equals class - for "exp = ans" types. Use ! to evaluate exp or ans.

--- a/content/exponents.html
+++ b/content/exponents.html
@@ -23,48 +23,58 @@
 
 <h2>Practice</h2>
 
-<p>1) \( 3^2 \) means __________________ = _____</p>
-
-<p>2) \( 2^3 \) means __________________ = _____</p>
-
-<p>3) \( 2^4 \) means __________________ = _____</p>
+<p>1) \( 3^2 \) means __________________ <span class="equals" data='{ ans:"!3**2" }'></span></p>
+<p>2) \( 2^3 \) means __________________ <span class="equals" data='{ ans:"!2**3" }'></span></p>
+<p>3) \( 2^4 \) means __________________ <span class="equals" data='{ ans:"!2**4" }'></span></p>
 
 <p> What does: \( 4^0 \) mean? </p>
 
-<p class="indent-1"> Anything "to the zero" equals 1. So  \( 4^0 = 1 \) </p>
+<p class="indent-1"> Anything "to the zero" equals 1. So  \( 4^0 = 1 \). </p>
 
 <h2> Fill in the series</h2>
 
-<p class="series" data='{len:5, value:"3**n", display:"\\(3^{n} = \\)" }'  > 1) </p>
+<p class="series" data='{len:5, ans:"3**n", exp:"\\(3^{n} = \\)" }'  ></p>
 
-<p class="series" data='{len:4, value:"4**n", display:"\\(4^{n} = \\)" }'  > 2) </p>
+<p class="series" data='{len:4, ans:"4**n", exp:"\\(4^{n} = \\)" }'  ></p>
 
-<p class="series" data='{len:7, value:"2**n", display:"\\(2^{n} = \\)" }'  > 3) </p>
+<p class="series" data='{len:7, ans:"2**n", exp:"\\(2^{n} = \\)" }'  ></p>
 
-<p class="series" data='{len:4, value:"5**n", display:"\\(5^{n} = \\)" }'  > 4) </p>
+<p class="series" data='{len:4, ans:"5**n", exp:"\\(5^{n} = \\)" }'  ></p>
 
-<p class="series" data='{len:4, value:"6**n", display:"\\(6^{n} = \\)" }'  > 5) </p>
+<p class="series" data='{len:4, ans:"6**n", exp:"\\(6^{n} = \\)" }'  ></p>
 
-<p class="series" data='{len:4, value:"7**n", display:"\\(7^{n} = \\)" }'  > 6) </p>
+<p class="series" data='{len:4, ans:"7**n", exp:"\\(7^{n} = \\)" }'  ></p>
 
-<p class="series" data='{len:4, value:"8**n", display:"\\(8^{n} = \\)" }'  > 7) </p>
+<p class="series" data='{len:4, ans:"8**n", exp:"\\(8^{n} = \\)" }'  ></p>
 
-<p class="series" data='{len:4, value:"9**n", display:"\\(9^{n} = \\)" }'  > 8) </p>
+<p class="series" data='{len:4, ans:"9**n", exp:"\\(9^{n} = \\)" }'  ></p>
 
-<p class="series" data='{len:4, value:"10**n", display:"\\(10^{n} = \\)" }'> 9) </p>
+<p class="series" data='{len:4, ans:"10**n", exp:"\\(10^{n} = \\)" }'></p>
 
 <h2> Reverse Exponents</h2>
 <p> Write each number in the exponent form. For example: 27 = \( 3^3 \) </p>
 
 <table style='width:100%'><tr><td>
-<p> 1) 32 = ___ </p>
-<p class="" data='{ x:"eval(2**5)" ans:"\\(2^5\\)" }'> 2) x = ans </p>
-<p> 3) 32 = ___ </p>
+
+<p class="equals" data='{ exp:"!2**6", ans:"2^6 \\text{ or } 4^3" }'></p>
+<p class="equals" data='{ exp:"!9**3", ans:"9^3" }'></p>
+<p class="equals" data='{ exp:"!4**3", ans:"4^3" }'></p>
+<p class="equals" data='{ exp:"!2**5", ans:"2^5" }'></p>
+<p class="equals" data='{ exp:"!8**3", ans:"8^3" }'></p>
+<p class="equals" data='{ exp:"!5**3", ans:"5^3" }'></p>
+<p class="equals" data='{ exp:"!5**4", ans:"5^4" }'></p>
+<p class="equals" data='{ exp:"!6**3", ans:"6^3" }'></p>
 
 </td><td>
-<p> 4) 32 = ___ </p>
-<p> 5) 32 = ___ </p>
-<p> 6) 32 = ___ </p>
+
+<p class="equals" data='{ exp:"!2**3", ans:"2^3" }'></p>
+<p class="equals" data='{ exp:"!5**2", ans:"5^2" }'></p>
+<p class="equals" data='{ exp:"!3**5", ans:"3^5" }'></p>
+<p class="equals" data='{ exp:"!2**8", ans:"2^8 \\text{ or } 4^4" }'></p>
+<p class="equals" data='{ exp:"!6**2", ans:"6^2" }'></p>
+<p class="equals" data='{ exp:"!3**4", ans:"3^4 \\text{ or } 9^2" }'></p>
+<p class="equals" data='{ exp:"!7**2", ans:"7^2" }'></p>
+<p class="equals" data='{ exp:"!7**3", ans:"7^3" }'></p>
 
 </td></tr></table>
 
