make class series work like class equals

--- a/content/exponents.html
+++ b/content/exponents.html
@@ -33,23 +33,16 @@
 
 <h2> Fill in the series</h2>
 
-<p class="series" data='{len:5, ans:"3**n", exp:"\\(3^{n} = \\)" }'  ></p>
+<p class="series" data='{len:5, exp:"3^{n} = ", ans:"!3**n" }'  ></p>
+<p class="series" data='{len:4, exp:"4^{n} = ", ans:"!4**n" }'  ></p>
+<p class="series" data='{len:7, exp:"2^{n} = ", ans:"!2**n" }'  ></p>
+<p class="series" data='{len:4, exp:"5^{n} = ", ans:"!5**n" }'  ></p>
+<p class="series" data='{len:4, exp:"6^{n} = ", ans:"!6**n" }'  ></p>
+<p class="series" data='{len:4, exp:"7^{n} = ", ans:"!7**n" }'  ></p>
+<p class="series" data='{len:4, exp:"8^{n} = ", ans:"!8**n" }'  ></p>
+<p class="series" data='{len:4, exp:"9^{n} = ", ans:"!9**n" }'  ></p>
+<p class="series" data='{len:4, exp:"10^{n} = ", ans:"!10**n" }'></p>
 
-<p class="series" data='{len:4, ans:"4**n", exp:"\\(4^{n} = \\)" }'  ></p>
-
-<p class="series" data='{len:7, ans:"2**n", exp:"\\(2^{n} = \\)" }'  ></p>
-
-<p class="series" data='{len:4, ans:"5**n", exp:"\\(5^{n} = \\)" }'  ></p>
-
-<p class="series" data='{len:4, ans:"6**n", exp:"\\(6^{n} = \\)" }'  ></p>
-
-<p class="series" data='{len:4, ans:"7**n", exp:"\\(7^{n} = \\)" }'  ></p>
-
-<p class="series" data='{len:4, ans:"8**n", exp:"\\(8^{n} = \\)" }'  ></p>
-
-<p class="series" data='{len:4, ans:"9**n", exp:"\\(9^{n} = \\)" }'  ></p>
-
-<p class="series" data='{len:4, ans:"10**n", exp:"\\(10^{n} = \\)" }'></p>
 
 <h2> Reverse Exponents</h2>
 <p> Write each number in the exponent form. For example: 27 = \( 3^3 \) </p>
