--- a/content/week1.html
+++ b/content/week1.html
@@ -17,7 +17,7 @@
 <table class="student-info"></table>
 <div class="main">
 
-<h2>Converting From a Number in a <em>different Base</em> to <em>Base 10</em>. </h2>
+<h2>Converting From a Number in a <em>different Base</em> to <em>Base 10</em></h2>
 
 <p class="instruct"> Example: Convert \(  213_{(4)} \) to Base 10</p>
 
