--- a/content/unit1.html
+++ b/content/unit1.html
@@ -13,96 +13,81 @@
 <body>
 
 
-<h1>Devotion Math League Bases</h1>
-<h2>Unit 1</h2>
+<h1>Devotion Math League Bases: Counting</h1>
 
-<table class="student-info">
- <tr>
- <td>____________________________________________</td>
- <td>_____________________</td>
- <td>_____________________</td>
- </tr>
- <tr>
- <td>Last Name, First Name</td>
- <td>Grade</td>
- <td>School</td>
- </tr>
-</table>
-
+<table class="student-info"></table>
 <div class="main">
 
-<p class="instruct">We first learned to count in Base 10.</p>
+<h2>Counting in Base 10</h2>
 
-<p class="problem-short"> 1) Fill in this sequence: 
-  <span class="series"> 0, 1, 2, ___, ___, ___, ___, ___, ___, 9 </span> </p>
+<p>We first learned to count in Base 10.</p>
+<p class="problem-shortx"> 1) Fill in this sequence: 
+  <span class="series" data='{len:10, ans:"!n", hints:[0,1,2,9] }'></span></p>
 
-<p class="instruct">It is called "Base 10" because there are TEN symbols, 
-  or TEN different digit "shapes".</p>
+<p>It is called "Base 10" because there are TEN symbols, or TEN different digit "shapes".</p>
+<p class="problem-shortx">2) Here are five symbols (or "shapes") in Base 10:
+  <span class="series" data='{len:5, ans:"![2,3,9,7,6][n]", hints:"all"}'></span> 
 
-<p class="problem-short">2) Here are five symbols (or "shapes") in Base 10:
-  <span class="series"> 2, 3, 9, 7, 6 </span> 
-<li class="problem-short"> What are the other five symbols:
-  <span class="series"> ___, ___, ___, ___, ___ </span> <br> 
-</li>
+<p class="indent1"> What are the other five symbols?: 
+  <span class="series" data='{len:5, ans:"![0,1,4,5,8][n]" }'></span> <p> 
 
-<p class="problem-short">3) How many symbols (or "shapes") in the English Alphabet? ___
+<p class="problem-shortx">3) How many symbols (or "shapes") in the English Alphabet?
+  <span class="series" data='{ans:"26"}'></span></p>
+
+<p class="problem-shortx">4) In Base 10:
+  <p class="indent1"> What is the largest number the can be written with one symbol?
+    <span class="series" data='{ans:"9"}'></span></p>
+  <p class="indent1"> What is the next number after that?
+    <span class="series" data='{ans:"10"}'></span></p>
+  <p class="indent1"> How many digits are used in this number? 
+    <span class="series" data='{ans:"10"}'></span></p>
 </p>
 
-<p class="problem-short">4) In Base 10:
-  <li class="problem-short"> What is the last symbol? ___ </li>
-  <li class="problem-short"> What is the number after that? ___</li>
-  <li class="problem-short"> How many digits are used in that number? ___ </li>
+
+<p class="problem-shortx">5) Write the number of digits used in each of these:
+    <p class="indent1">One hundred:
+      <span class="series" data='{ans:"3"}'></span></p>
+    <p class="indent1">Five hundred and three:
+      <span class="series" data='{ans:"3"}'></span></p>
+    <p class="indent1">Fifteen thousand two hundred and thirty:
+      <span class="series" data='{ans:"5"}'></span></p>
 </p>
 
+<p class="problem-shortx">6) Fill in this Base 10 sequence:</p>
+  <p class="series indent1" data='{len:17 , ans:"!n", hints:[3,4,12,16] }'></p>
 
-<p class="problem-short">5) Write the number of digits used in each of these:
-    <li class="problem-short">One hundred: ___ </li>
-    <li class="problem-short">Five hundred and three: ___</li>
-    <li class="problem-short">Fifteen thousand two hundred and thirty: ___</li>
-</p>
+<h2>Counting in Base 5</h2>
 
-<p class="problem-short">6) Fill in this sequence:<br><br>
-  <span class="series">
-    ___, ___, ___, 3, 4, 5, ___, ___, ___, ___, ___, ___, 12, ___, ___, ___, ___, 17
-  </span></p>
-</p>
-
-<p class="instruct">In Base 5, there are only FIVE symbols or "shapes".
+<p>In Base 5, there are only FIVE symbols or "shapes".
   They are: <span class="series"> 0, 1, 2, 3, 4 </span>
 </p>
 
-<p class="problem-short">7) Here are two Base 5 symbols (or "shapes"):
-  <span class="series"> 2, 4 </span> 
-  <li class="problem-short"> What are the other three symbols?
-    <span class="series"> ___, ___, ___ </span> <br> 
-  </li>
-</p>
+<p class="problem-shortx">7) Here are two Base 5 symbols (or "shapes"):
+  <span class="series"> 2, 4 </span></p>
+<p class="indent1"> What are the other five symbols?: 
+  <span class="series" data='{len:3, ans:"![0,1,3][n]" }'></span> <p> 
 
-<p class="problem-short">8) In Base 3, there are only ___ symbols. They are: _____________________
-</p>
+<p class="problem-shortx">8) In Base 3, there are only <span class="series" data='{ans:"3"}'></span> symbols. They are: <span class="series" data='{len:3, ans:"!n" }'></span></p> 
 
-<p class="problem-short">9) In Base 8, there are only ___ symbols. They are: _____________________
-</p>
+<p class="problem-shortx">9) In Base 8, there are only <span class="series" data='{ans:"8"}'></span> symbols. They are: <span class="series" data='{len:8, ans:"!n" }'></span></p> 
 
-<p class="problem-short">10) In Base 2, there are only ___ symbols. They are: _____________________
-</p>
+<p class="problem-shortx">10) In Base 2, there are only <span class="series" data='{ans:"2"}'></span> symbols. They are: <span class="series" data='{len:2, ans:"!n" }'></span></p> 
 
-<p class="problem-short">11) Let's go back to Base 5. In Base 5, the last symbol is: ___.
-</p>
+<p class="problem-shortx">11) Let's go back to Base 5. In Base 5, the last symbol is: 
+  <span class="series" data='{ans:"4"}'></span>.</p>
 
-<p class="problem-short">To write a number that is ONE MORE than 4, we have to use ___ digits. And that number, 4 + 1, is written like this: 10. It looks like TEN. But it means FIVE. So we write \( 10_{(5)} \)
-</p>
+<p class="problem-shortx">To write a number that is ONE MORE than 4, we have to use <span class="series" data='{ans:"2"}'></span> digits.<br>
+  And that number, 4 + 1, is written like this: 10.<br>
+  It looks like TEN. But it means FIVE. So we write \( 10_{(5)} \)</p>
 
-<p class="problem-short">12) Fill in this sequence using Base 5:<br><br>
-    <span class="series"> ___, \( 1_{(5)} \), ___, ___, \( 4_{(5)} \), ___, \( 11_{(5)} \), ___, ___, ___ </span> <br> 
-</p>
+<p class="problem-shortx">12) Fill in this sequence using Base 5:</p>
+<p class="series" data='{len:10, ans:"!as_ml(n,5)", hints:[1,4,6], base:5}'></p> 
 
-<p class="problem-short">12) In Base 5, what number comes after \( 14_{(5)} \): ___
-</p>
+<p class="problem-shortx">12) In Base 5, what number comes after \( 14_{(5)} \): 
+    <span class="series" data='{ans:"20_{(5)}"}'></span>.</p>
 
-<p class="problem-short">12) Fill in this sequence using Base 5:<br><br>
-    <span class="series"> ___, \( 14_{(5)} \), ___, ___, \( 22_{(5)} \), ___, ___, ___, ___, \( 32_{(5)} \), ___</span> <br> 
-</p>
+<p class="problem-shortx">12) Fill in this sequence using Base 5:</p>
+<p class="series" data='{len:11, ans:"!as_ml(8+n,5)", hints:[1,4,9], base:5}'></p> 
 
 
 </div>
