--- a/content/unit1.html
+++ b/content/unit1.html
@@ -12,11 +12,10 @@
 
 <body>
 
-
 <h1>Devotion Math League Bases: Counting</h1>
-
 <table class="student-info"></table>
 <div class="main">
+
 
 <h2>Counting in Base 10</h2>
 
@@ -43,7 +42,6 @@
     <span class="series" data='{ans:"10"}'></span></p>
 </p>
 
-
 <p class="problem-shortx">5) Write the number of digits used in each of these:
     <p class="indent1">One hundred:
       <span class="series" data='{ans:"3"}'></span></p>
@@ -56,39 +54,43 @@
 <p class="problem-shortx">6) Fill in this Base 10 sequence:</p>
   <p class="series indent1" data='{len:17 , ans:"!n", hints:[3,4,12,16] }'></p>
 
+
 <h2>Counting in Base 5</h2>
 
 <p>In Base 5, there are only FIVE symbols or "shapes".
-  They are: <span class="series"> 0, 1, 2, 3, 4 </span>
-</p>
+  They are: <span class="series"> 0, 1, 2, 3, 4 </span></p>
 
-<p class="problem-shortx">7) Here are two Base 5 symbols (or "shapes"):
+<p class="problem-shortx">1) Here are two Base 5 symbols (or "shapes"):
   <span class="series"> 2, 4 </span></p>
 <p class="indent1"> What are the other five symbols?: 
   <span class="series" data='{len:3, ans:"![0,1,3][n]" }'></span> <p> 
 
-<p class="problem-shortx">8) In Base 3, there are only <span class="series" data='{ans:"3"}'></span> symbols. They are: <span class="series" data='{len:3, ans:"!n" }'></span></p> 
+<p class="problem-shortx">2) In Base 3, there are only <span class="series" data='{ans:"3"}'></span> symbols. They are: <span class="series" data='{len:3, ans:"!n" }'></span></p> 
 
-<p class="problem-shortx">9) In Base 8, there are only <span class="series" data='{ans:"8"}'></span> symbols. They are: <span class="series" data='{len:8, ans:"!n" }'></span></p> 
+<p class="problem-shortx">3) In Base 8, there are only <span class="series" data='{ans:"8"}'></span> symbols. They are: <span class="series" data='{len:8, ans:"!n" }'></span></p> 
 
-<p class="problem-shortx">10) In Base 2, there are only <span class="series" data='{ans:"2"}'></span> symbols. They are: <span class="series" data='{len:2, ans:"!n" }'></span></p> 
+<p class="problem-shortx">4) In Base 2, there are only <span class="series" data='{ans:"2"}'></span> symbols. They are: <span class="series" data='{len:2, ans:"!n" }'></span></p> 
 
-<p class="problem-shortx">11) Let's go back to Base 5. In Base 5, the last symbol is: 
+<p class="problem-shortx">5) Let's go back to Base 5. In Base 5, the last symbol is: 
   <span class="series" data='{ans:"4"}'></span>.</p>
 
 <p class="problem-shortx">To write a number that is ONE MORE than 4, we have to use <span class="series" data='{ans:"2"}'></span> digits.<br>
   And that number, 4 + 1, is written like this: 10.<br>
   It looks like TEN. But it means FIVE. So we write \( 10_{(5)} \)</p>
 
-<p class="problem-shortx">12) Fill in this sequence using Base 5:</p>
+<p class="problem-shortx">6) Fill in this sequence using Base 5:</p>
 <p class="series" data='{len:10, ans:"!as_ml(n,5)", hints:[1,4,6], base:5}'></p> 
 
-<p class="problem-shortx">12) In Base 5, what number comes after \( 14_{(5)} \): 
-    <span class="series" data='{ans:"20_{(5)}"}'></span>.</p>
+<p class="problem-shortx">7) In Base 5, what number comes after \( 14_{(5)} \): 
+  <span class="series" data='{ans:"20_{(5)}"}'></span>.</p>
 
-<p class="problem-shortx">12) Fill in this sequence using Base 5:</p>
+<p class="problem-shortx">8) Fill in this sequence using Base 5:</p>
 <p class="series" data='{len:11, ans:"!as_ml(8+n,5)", hints:[1,4,9], base:5}'></p> 
 
+<p class="problem-shortx">9) What comes after \( 44_{(5)} \)?
+  <span class="series" data='{ans:"100_{(5)}", base:5}'></span>. Hint: think about what happens after \( 99_{(10)} \).</p>
+
+<h2>Practice</h2>
 
 </div>
 
