--- a/content/unit1.html
+++ b/content/unit1.html
@@ -19,76 +19,79 @@
 
 <h2>Counting in Base 10</h2>
 
+<ol>
 <p>We first learned to count in Base 10.</p>
-<p class="problem-shortx"> 1) Fill in this sequence: 
-  <span class="series" data='{len:10, ans:"!n", hints:[0,1,2,9] }'></span></p>
+<li>Fill in this sequence: 
+  <span class="series" data='{len:10, ans:"!n", hints:[0,1,2,9] }'></span></li>
 
 <p>It is called "Base 10" because there are TEN symbols, or TEN different digit "shapes".</p>
-<p class="problem-shortx">2) Here are five symbols (or "shapes") in Base 10:
-  <span class="series" data='{len:5, ans:"![2,3,9,7,6][n]", hints:"all"}'></span> 
+<li>Here are five symbols (or "shapes") in Base 10:
+  <span class="series" data='{len:5, ans:"![2,3,9,7,6][n]", hints:"all"}'></span></li>
 
 <p class="indent1"> What are the other five symbols?: 
-  <span class="series" data='{len:5, ans:"![0,1,4,5,8][n]" }'></span> <p> 
+  <span class="series" data='{len:5, ans:"![0,1,4,5,8][n]" }'></span></p> 
 
-<p class="problem-shortx">3) How many symbols (or "shapes") in the English Alphabet?
-  <span class="series" data='{ans:"26"}'></span></p>
+<li>How many symbols (or "shapes") in the English Alphabet?
+  <span class="series" data='{ans:"26"}'></span></li>
 
-<p class="problem-shortx">4) In Base 10:
+<li>In Base 10:
   <p class="indent1"> What is the largest number the can be written with one symbol?
     <span class="series" data='{ans:"9"}'></span></p>
   <p class="indent1"> What is the next number after that?
     <span class="series" data='{ans:"10"}'></span></p>
   <p class="indent1"> How many digits are used in this number? 
     <span class="series" data='{ans:"10"}'></span></p>
-</p>
+</li>
 
-<p class="problem-shortx">5) Write the number of digits used in each of these:
+<li>Write the number of digits used in each of these:
     <p class="indent1">One hundred:
       <span class="series" data='{ans:"3"}'></span></p>
     <p class="indent1">Five hundred and three:
       <span class="series" data='{ans:"3"}'></span></p>
     <p class="indent1">Fifteen thousand two hundred and thirty:
       <span class="series" data='{ans:"5"}'></span></p>
-</p>
+</li>
 
-<p class="problem-shortx">6) Fill in this Base 10 sequence:</p>
-  <p class="series indent1" data='{len:17 , ans:"!n", hints:[3,4,12,16] }'></p>
+<li>Fill in this Base 10 sequence:
+  <p class="series indent1" data='{len:17 , ans:"!n", hints:[3,4,12,16] }'></p></li>
+</ol>
 
 
 <h2>Counting in Base 5</h2>
 
+<ol>
 <p>In Base 5, there are only FIVE symbols or "shapes".
   They are: <span class="series"> 0, 1, 2, 3, 4 </span></p>
 
-<p class="problem-shortx">1) Here are two Base 5 symbols (or "shapes"):
-  <span class="series"> 2, 4 </span></p>
+<li>Here are two Base 5 symbols (or "shapes"): <span class="series"> 2, 4 </span></li>
 <p class="indent1"> What are the other five symbols?: 
-  <span class="series" data='{len:3, ans:"![0,1,3][n]" }'></span> <p> 
+  <span class="series" data='{len:3, ans:"![0,1,3][n]" }'></span></p> 
 
-<p class="problem-shortx">2) In Base 3, there are only <span class="series" data='{ans:"3"}'></span> symbols. They are: <span class="series" data='{len:3, ans:"!n" }'></span></p> 
+<li>In Base 3, there are only <span class="series" data='{ans:"3"}'></span> symbols. They are: <span class="series" data='{len:3, ans:"!n" }'></span></li> 
 
-<p class="problem-shortx">3) In Base 8, there are only <span class="series" data='{ans:"8"}'></span> symbols. They are: <span class="series" data='{len:8, ans:"!n" }'></span></p> 
+<li>In Base 8, there are only <span class="series" data='{ans:"8"}'></span> symbols. They are: <span class="series" data='{len:8, ans:"!n" }'></span></li> 
 
-<p class="problem-shortx">4) In Base 2, there are only <span class="series" data='{ans:"2"}'></span> symbols. They are: <span class="series" data='{len:2, ans:"!n" }'></span></p> 
+<li>In Base 2, there are only <span class="series" data='{ans:"2"}'></span> symbols. They are: <span class="series" data='{len:2, ans:"!n" }'></span></li> 
 
-<p class="problem-shortx">5) Let's go back to Base 5. In Base 5, the last symbol is: 
-  <span class="series" data='{ans:"4"}'></span>.</p>
+<li>Let's go back to Base 5. In Base 5, the last symbol is: 
+  <span class="series" data='{ans:"4"}'></span>.</li>
 
-<p class="problem-shortx">To write a number that is ONE MORE than 4, we have to use <span class="series" data='{ans:"2"}'></span> digits.<br>
+<p>To write a number that is ONE MORE than 4, we have to use <span class="series" data='{ans:"2"}'></span> digits.<br>
   And that number, 4 + 1, is written like this: 10.<br>
   It looks like TEN. But it means FIVE. So we write \( 10_{(5)} \)</p>
 
-<p class="problem-shortx">6) Fill in this sequence using Base 5:</p>
+<li>Fill in this sequence using Base 5:</li>
 <p class="series" data='{len:10, ans:"!as_ml(n,5)", hints:[1,4,6], base:5}'></p> 
 
-<p class="problem-shortx">7) In Base 5, what number comes after \( 14_{(5)} \): 
-  <span class="series" data='{ans:"20_{(5)}"}'></span>.</p>
+<li>In Base 5, what number comes after \( 14_{(5)} \): 
+  <span class="series" data='{ans:"20_{(5)}"}'></span>.</li>
 
-<p class="problem-shortx">8) Fill in this sequence using Base 5:</p>
+<li>Fill in this sequence using Base 5:</li>
 <p class="series" data='{len:11, ans:"!as_ml(8+n,5)", hints:[1,4,9], base:5}'></p> 
 
-<p class="problem-shortx">9) What comes after \( 44_{(5)} \)?
-  <span class="series" data='{ans:"100_{(5)}", base:5}'></span>. Hint: think about what happens after \( 99_{(10)} \).</p>
+<li>What comes after \( 44_{(5)} \)?
+  <span class="series" data='{ans:"100_{(5)}", base:5}'></span>. Hint: think about what happens after \( 99_{(10)} \).</li>
+</ol>
 
 <h2>Practice</h2>
 
