--- a/content/counting.html
+++ b/content/counting.html
@@ -40,7 +40,7 @@
   <p class="indent1"> What is the next number after that?
     <span class="series" data='{ans:"10"}'></span></p>
   <p class="indent1"> How many digits are used in this number? 
-    <span class="series" data='{ans:"10"}'></span></p>
+    <span class="series" data='{ans:"2"}'></span></p>
 </li>
 
 <li>Write the number of digits used in each of these:
@@ -64,7 +64,7 @@
   They are: <span class="series"> 0, 1, 2, 3, 4 </span></p>
 
 <li>Here are two Base 5 symbols (or "shapes"): <span class="series"> 2, 4 </span></li>
-<p class="indent1"> What are the other five symbols?: 
+<p class="indent1"> What are the other three symbols?: 
   <span class="series" data='{len:3, ans:"![0,1,3][n]" }'></span></p> 
 
 <li>In Base 3, there are only <span class="series" data='{ans:"3"}'></span> symbols. They are: <span class="series" data='{len:3, ans:"!n" }'></span></li> 
@@ -73,12 +73,12 @@
 
 <li>In Base 2, there are only <span class="series" data='{ans:"2"}'></span> symbols. They are: <span class="series" data='{len:2, ans:"!n" }'></span></li> 
 
-<li>Let's go back to Base 5. In Base 5, the last symbol is: 
+<li>Let's go back to Base 5. In Base 5, the largest number you can make with one digit is: 
   <span class="series" data='{ans:"4"}'></span>.</li>
 
 <p>To write a number that is ONE MORE than 4, we have to use <span class="series" data='{ans:"2"}'></span> digits.<br>
   And that number, 4 + 1, is written like this: 10.<br>
-  It looks like TEN. But it means FIVE. So we write \( 10_{(5)} \)</p>
+  It looks like TEN. But it means FIVE. To know we mean Base 5, we write \( 10_{(5)} \)</p>
 
 <li>Fill in this sequence using Base 5:</li>
 <p class="series" data='{len:10, ans:"!as_ml(n,5)", hints:[1,4,6], base:5}'></p> 
