--- a/content/counting.html
+++ b/content/counting.html
@@ -94,6 +94,57 @@
 </ol>
 
 <h2>Practice</h2>
+<ol>
+
+<li>Fill in this sequence using Base 3:</li>
+<p class="series" data='{len:12, ans:"!as_ml(n,3)", hints:[0,4,7], base:3}'></p> 
+
+<li>Fill in this sequence using Base 7:</li>
+<p class="series" data='{len:12, ans:"!as_ml(n+9,7)", hints:[2,5,9], base:7}'></p> 
+
+<li>Fill in this sequence using Base 2:</li>
+<p class="series" data='{len:12, ans:"!as_ml(n,2)", hints:[1,5,8], base:2}'></p> 
+
+<li>Fill in this sequence using Base 6:</li>
+<p class="series" data='{len:12, ans:"!as_ml(n+5,6)", hints:[1,5,8], base:6}'></p> 
+
+<li>Fill in this sequence using Base 4:</li>
+<p class="series" data='{len:12, ans:"!as_ml(n+15,4)", hints:[5,10], base:4}'></p> 
+
+<li>Fill in this sequence using Base 8:</li>
+<p class="series" data='{len:12, ans:"!as_ml(n+45,8)", hints:[2,10], base:8}'></p> 
+
+<li>Fill in this sequence using Base 5:</li>
+<p class="series" data='{len:12, ans:"!as_ml(n+29,5)", hints:[2,6], base:5}'></p> 
+
+<p><br>Now things get a bit harder. These sequences don't increase by 1.</p>
+
+<li>Fill in this sequence using Base 10:</li>
+<p class="series" data='{len:12, ans:"!as_ml(2*n,10)", hints:[2,4,7, 11], base:10}'></p> 
+
+<li>Fill in this sequence using Base 5:</li>
+<p class="series" data='{len:12, ans:"!as_ml(2*n,5)", hints:[2,4,7, 11], base:5}'></p> 
+
+<li>Fill in this sequence using Base 3:</li>
+<p class="series" data='{len:12, ans:"!as_ml(10+2*n,3)", hints:[2,4,7, 11], base:3, blank:4}'></p> 
+
+<li>Fill in this sequence using Base 4:</li>
+<p class="series" data='{len:12, ans:"!as_ml(3*n,4)", hints:[0,4,5, 11], base:4}'></p> 
+
+<li>Fill in this sequence using Base 2:</li>
+<p class="series" data='{len:9, ans:"!as_ml(3*n,2)", hints:[0,3,4, 8], base:2, blank:4}'></p> 
+
+<li>Fill in this sequence using Base 6:</li>
+<p class="series" data='{len:12, ans:"!as_ml(3*n+6,6)", hints:[0,2,7, 11], base:6}'></p> 
+
+<li>Fill in this sequence using Base 7:</li>
+<p class="series" data='{len:12, ans:"!as_ml(4*n,7)", hints:[2,4,7, 11], base:7}'></p> 
+
+<li>Fill in this sequence using Base 5:</li>
+<p class="series" data='{len:12, ans:"!as_ml(4*n+8,5)", hints:[0, 6,8, 11], base:5}'></p> 
+
+
+</ol>
 
 </div>
 
