--- a/content/counting.html
+++ b/content/counting.html
@@ -26,10 +26,10 @@
 
 <p>It is called "Base 10" because there are TEN symbols, or TEN different digit "shapes".</p>
 <li>Here are five symbols (or "shapes") in Base 10:
-  <span class="series" data='{len:5, ans:"![2,3,9,7,6][n]", hints:"all"}'></span></li>
+  <span class="series" data='{len:5, ans:"![2,3,9,7,6][n]", hints:"all"}'></span>
 
 <p class="indent1"> What are the other five symbols?: 
-  <span class="series" data='{len:5, ans:"![0,1,4,5,8][n]" }'></span></p> 
+  <span class="series" data='{len:5, ans:"![0,1,4,5,8][n]" }'></span></p> </li>
 
 <li>How many symbols (or "shapes") in the English Alphabet?
   <span class="series" data='{ans:"26"}'></span></li>
@@ -63,9 +63,9 @@
 <p>In Base 5, there are only FIVE symbols or "shapes".
   They are: <span class="series"> 0, 1, 2, 3, 4 </span></p>
 
-<li>Here are two Base 5 symbols (or "shapes"): <span class="series"> 2, 4 </span></li>
+<li>Here are two Base 5 symbols (or "shapes"): <span class="series"> 2, 4 </span>
 <p class="indent1"> What are the other three symbols?: 
-  <span class="series" data='{len:3, ans:"![0,1,3][n]" }'></span></p> 
+  <span class="series" data='{len:3, ans:"![0,1,3][n]" }'></span></p></li>
 
 <li>In Base 3, there are only <span class="series" data='{ans:"3"}'></span> symbols. They are: <span class="series" data='{len:3, ans:"!n" }'></span></li> 
 
