more exponent problems and automatic numbering with <ol>

--- a/content/exponents.html
+++ b/content/exponents.html
@@ -21,55 +21,92 @@
 
 <p> Example: \( 4^3 \) means \( 4 \times 4 \times 4 = 64\) </p>
 
-<h2>Practice</h2>
+<ol>
 
-<p>1) \( 3^2 \) means __________________ <span class="equals" data='{ ans:"!3**2" }'></span></p>
-<p>2) \( 2^3 \) means __________________ <span class="equals" data='{ ans:"!2**3" }'></span></p>
-<p>3) \( 2^4 \) means __________________ <span class="equals" data='{ ans:"!2**4" }'></span></p>
+<li> \( 3^2 \) means __________________ <span class="equals" data='{ ans:"!3**2" }'></span></li>
+<li> \( 2^3 \) means __________________ <span class="equals" data='{ ans:"!2**3" }'></span></li>
+<li> \( 2^4 \) means __________________ <span class="equals" data='{ ans:"!2**4" }'></span></li>
+
+</ol>
 
 <p> What does: \( 4^0 \) mean? </p>
 
 <p class="indent1"> Anything "to the zero" equals 1. So  \( 4^0 = 1 \). </p>
 
-<h2> Fill in the series</h2>
+<h2> Practice</h2>
+<p>Fill in the series</p>
+<ol>
+<li class="series" data='{len:5, exp:"3^{n} = ", ans:"!3**n"}'  ></li>
+<li class="series" data='{len:4, exp:"4^{n} = ", ans:"!4**n"}'  ></li>
+<li class="series" data='{len:7, exp:"2^{n} = ", ans:"!2**n"}'  ></li>
+<li class="series" data='{len:4, exp:"5^{n} = ", ans:"!5**n"}'  ></li>
+<li class="series" data='{len:4, exp:"8^{n} = ", ans:"!8**n"}'  ></li>
+<li class="series" data='{len:4, exp:"6^{n} = ", ans:"!6**n"}'  ></li>
+<li class="series" data='{len:4, exp:"10^{n} = ", ans:"!10**n", blank:5 }'></li>
+<li class="series" data='{len:4, exp:"7^{n} = ", ans:"!7**n"}'  ></li>
+<li class="series" data='{len:4, exp:"9^{n} = ", ans:"!9**n"}'  ></li>
+</ol>
 
-<p class="series" data='{len:5, exp:"3^{n} = ", ans:"!3**n" }'  ></p>
-<p class="series" data='{len:4, exp:"4^{n} = ", ans:"!4**n" }'  ></p>
-<p class="series" data='{len:7, exp:"2^{n} = ", ans:"!2**n" }'  ></p>
-<p class="series" data='{len:4, exp:"5^{n} = ", ans:"!5**n" }'  ></p>
-<p class="series" data='{len:4, exp:"6^{n} = ", ans:"!6**n" }'  ></p>
-<p class="series" data='{len:4, exp:"7^{n} = ", ans:"!7**n" }'  ></p>
-<p class="series" data='{len:4, exp:"8^{n} = ", ans:"!8**n" }'  ></p>
-<p class="series" data='{len:4, exp:"9^{n} = ", ans:"!9**n" }'  ></p>
-<p class="series" data='{len:4, exp:"10^{n} = ", ans:"!10**n" }'></p>
-
-
-<h2> Reverse Exponents</h2>
-<p> Write each number in the exponent form. For example: 27 = \( 3^3 \) </p>
+<p> Write each number in the exponent form. For example: 27 = \( 3^3 \). If there is more than one correct answer, write them all.</p>
 
 <table style='width:100%'><tr><td>
-
-<p class="equals" data='{ exp:"!2**6", ans:"2^6 \\text{ or } 4^3" }'></p>
-<p class="equals" data='{ exp:"!9**3", ans:"9^3" }'></p>
-<p class="equals" data='{ exp:"!4**3", ans:"4^3" }'></p>
-<p class="equals" data='{ exp:"!2**5", ans:"2^5" }'></p>
-<p class="equals" data='{ exp:"!8**3", ans:"8^3" }'></p>
-<p class="equals" data='{ exp:"!5**3", ans:"5^3" }'></p>
-<p class="equals" data='{ exp:"!5**4", ans:"5^4" }'></p>
-<p class="equals" data='{ exp:"!6**3", ans:"6^3" }'></p>
+<ol>
+<li class="equals" data='{ exp:"!10**2", ans:"10^2", blank:8 }'></li>
+<li class="equals" data='{ exp:"!2**6", ans:"2^6 \\text{ or } 4^3", blank:8 }'></li>
+<li class="equals" data='{ exp:"!9**3", ans:"9^3", blank:8 }'></li>
+<li class="equals" data='{ exp:"!3**2", ans:"3^2 \\text{ or } 9^1", blank:8 }'></li>
+<li class="equals" data='{ exp:"!2**5", ans:"2^5", blank:8 }'></li>
+<li class="equals" data='{ exp:"!8**3", ans:"8^3", blank:8 }'></li>
+<li class="equals" data='{ exp:"!5**3", ans:"5^3", blank:8 }'></li>
+<li class="equals" data='{ exp:"!5**4", ans:"5^4", blank:8 }'></li>
+<li class="equals" data='{ exp:"!6**3", ans:"6^3", blank:8 }'></li>
+</ol>
 
 </td><td>
-
-<p class="equals" data='{ exp:"!2**3", ans:"2^3" }'></p>
-<p class="equals" data='{ exp:"!5**2", ans:"5^2" }'></p>
-<p class="equals" data='{ exp:"!3**5", ans:"3^5" }'></p>
-<p class="equals" data='{ exp:"!2**8", ans:"2^8 \\text{ or } 4^4" }'></p>
-<p class="equals" data='{ exp:"!6**2", ans:"6^2" }'></p>
-<p class="equals" data='{ exp:"!3**4", ans:"3^4 \\text{ or } 9^2" }'></p>
-<p class="equals" data='{ exp:"!7**2", ans:"7^2" }'></p>
-<p class="equals" data='{ exp:"!7**3", ans:"7^3" }'></p>
+<ol>
+<li class="equals" data='{ exp:"!2**3", ans:"2^3", blank:8 }'></li>
+<li class="equals" data='{ exp:"!5**2", ans:"5^2", blank:8 }'></li>
+<li class="equals" data='{ exp:"!3**5", ans:"3^5", blank:8 }'></li>
+<li class="equals" data='{ exp:"!2**8", ans:"2^8 \\text{ or } 4^4", blank:8 }'></li>
+<li class="equals" data='{ exp:"!6**2", ans:"6^2", blank:8 }'></li>
+<li class="equals" data='{ exp:"!3**4", ans:"3^4 \\text{ or } 9^2", blank:8 }'></li>
+<li class="equals" data='{ exp:"!7**2", ans:"7^2", blank:8 }'></li>
+<li class="equals" data='{ exp:"!9**3", ans:"9^3", blank:8 }'></li>
+<li class="equals" data='{ exp:"!7**3", ans:"7^3", blank:8 }'></li>
+</ol>
 
 </td></tr></table>
+
+<p> More exponent practice. These might get hard.</p>
+
+<table style='width:100%'><tr><td>
+<ol>
+<li class="equals" data='{ exp:"6^3", ans:"!6**3" }'></li>
+<li class="equals" data='{ exp:"4^4", ans:"!4**4" }'></li>
+<li class="equals" data='{ exp:"7^3", ans:"!7**3" }'></li>
+<li class="equals" data='{ exp:"2^7", ans:"!2**7" }'></li>
+<li class="equals" data='{ exp:"2^9", ans:"!2**9" }'></li>
+<li class="equals" data='{ exp:"4^5", ans:"!4**5" }'></li>
+<li class="equals" data='{ exp:"5^5", ans:"!5**5" }'></li>
+<li class="equals" data='{ exp:"8^4", ans:"!8**4" }'></li>
+<li class="equals" data='{ exp:"5^0", ans:"!5**0" }'></li>
+</ol>
+
+</td><td>
+<ol>
+<li class="equals" data='{ exp:"3^5", ans:"!3**5" }'></li>
+<li class="equals" data='{ exp:"4^6", ans:"!4**6" }'></li>
+<li class="equals" data='{ exp:"7^4", ans:"!7**4" }'></li>
+<li class="equals" data='{ exp:"5^4", ans:"!5**4" }'></li>
+<li class="equals" data='{ exp:"15^0", ans:"!15**0" }'></li>
+<li class="equals" data='{ exp:"3^6", ans:"!3**6" }'></li>
+<li class="equals" data='{ exp:"11^2", ans:"!11**2" }'></li>
+<li class="equals" data='{ exp:"9^3", ans:"!9**3" }'></li>
+<li class="equals" data='{ exp:"12^2", ans:"!12**2" }'></li>
+</ol>
+
+</td></tr></table>
+
 
 </div>
 </body>
