--- a/content/tobase10.html
+++ b/content/tobase10.html
@@ -12,16 +12,16 @@
 
 <body>
 
-<h1>Devotion Math League Bases: Week 1</h1>
+<h1>Devotion Math League Bases: Converting to Base 10</h1>
 
 <table class="student-info"></table>
 <div class="main">
 
-<h2>Converting From a Number in a <em>different Base</em> to <em>Base 10</em></h2>
+<h2>Steps for converting a number from a <em>different Base</em> to <em>Base 10</em></h2>
 
 <p class="instruct"> Example: Convert \(  213_{(4)} \) to Base 10</p>
 
-<p><strong>Step1:</strong> Draw a "Base 4 Conversion Table" with exponents on top.</p>
+<p><strong>Step1:</strong> Draw a "Base 4 Conversion Table" with exponents on top.<br>In this case, we make 3 columns because \(  213_{(4)} \) is a 3-digit number.</p>
 <table class="base-chart" data = '{num: "213_4", top: "exponents"}'> </table>
 
 <p><strong>Step2:</strong> Calculate the exponents. These are the <em>place values</em> . </p>
@@ -40,37 +40,41 @@
 <p>Or: \( 213_{(4)} = 39_{(10)}  \)</p>
 
 
-<h2>Practice Problems</h2>
-<p>1) Convert \( 213_{(3)} \) to Base 10</p>
-<table class="base-chart" data = '{num: "213_3", top: "both"}'> </table>
+<h2>Practice</h2>
+<ol>
+<li>Convert \( 212_{(3)} \) to Base 10</li>
+<table class="base-chart" data = '{num: "212_3", top: "both"}'> </table>
 
-<p>2) Convert \( 423_{(5)} \) to Base 10</p>
+<li>Convert \( 423_{(5)} \) to Base 10</li>
 <table class="base-chart" data = '{num: "423_5", top: "both"}'> </table>
 
-<p>3) Convert \( 100_{(6)} \) to Base 10</p>
+<li>Convert \( 100_{(6)} \) to Base 10</li>
 <table class="base-chart" data = '{num: "100_6", top: "both"}'> </table>
 
-<p>4) Convert \( 11011_{(2)} \) to Base 10</p>
+<li>Convert \( 11011_{(2)} \) to Base 10</li>
 <table class="base-chart" data = '{num: "11011_2", top: "both"}'> </table>
 
-<p>5) Convert \( 1232_{(4)} \) to Base 10</p>
+<li>Convert \( 1232_{(4)} \) to Base 10</li>
 <table class="base-chart" data = '{num: "1232_4", top: "both"}'> </table>
 
-<p>6) Convert \( 4241_{(5)} \) to Base 10</p>
+<li>Convert \( 4241_{(5)} \) to Base 10</li>
 <table class="base-chart" data = '{num: "4241_5", top: "exponents"}'> </table>
 
-<p>7) Convert \( 325_{(7)} \) to Base 10</p>
+<li>Convert \( 325_{(7)} \) to Base 10</li>
 <table class="base-chart" data = '{num: "325_7", top: "exponents"}'> </table>
 
-<p>8) Convert \( 702_{(8)} \) to Base 10</p>
+<li>Convert \( 702_{(8)} \) to Base 10</li>
 <table class="base-chart" data = '{num: "702_8", top: "exponents"}'> </table>
 
-<p>9) Convert \( 55_{(9)} \) to Base 10</p>
+<li>Convert \( 55_{(9)} \) to Base 10</li>
 <table class="base-chart" data = '{num: "55_9", top: "exponents"}'> </table>
 
-<p>10) Convert \( 1101101_{(2)} \) to Base 10</p>
+<li>Convert \( 1101101_{(2)} \) to Base 10</li>
 <table class="base-chart" data = '{num: "1101101_2", top: "none"}'> </table>
+</ol>
 
+<h2>More Practice</h2>
+<p class="equals" data='{ exp:"!as_ml(55, 7)" , ans:"55_{(10)}" , base:10 }'></p>
 
 </div>
 </body>
