test cases, use "equation" as more effecient data representation instead of data=''

--- a/content/test.html
+++ b/content/test.html
@@ -17,6 +17,22 @@
 <table class="student-info"></table>
 <div class="main">
 
+
+<p>Test Cases</p>
+
+<p class="series" data='{len:12, ans:"!as_ml(n,3)", hints:[0,4,7], base:3}'></p> 
+
+<p class="series" data='{len:5, exp:"3^{n} = ", ans:"!3**n"}'  ></p>
+
+<p class="equals" data='{ exp:"!as_ml(55, 7)" , ans:"55_{(10)}" , base:10 }'></p>
+
+<p class="equals" data='{ exp:"7^3", ans:"!7**3" }'></p>
+
+<p class="equals" data='{ exp:"!2**8", ans:"2^8 \\text{ or } 4^4", blank:8 }'></p>
+
+<p class="equation" exp=!2**8 ans="2^8 \text{ or } 4^4" blank=8> 
+
+
 <p>Example of long addition</p>
 <p>
 
