refactor class equals -> equation

--- a/content/exponents.html
+++ b/content/exponents.html
@@ -23,9 +23,9 @@
 
 <ol>
 
-<li> \( 3^2 \) means __________________ <span class="equals" data='{ ans:"!3**2" }'></span></li>
-<li> \( 2^3 \) means __________________ <span class="equals" data='{ ans:"!2**3" }'></span></li>
-<li> \( 2^4 \) means __________________ <span class="equals" data='{ ans:"!2**4" }'></span></li>
+<li> \( 3^2 \) means __________________ <span class="equation" ans="!3**2"></span></li>
+<li> \( 2^3 \) means __________________ <span class="equation" ans="!2**3"></span></li>
+<li> \( 2^4 \) means __________________ <span class="equation" ans="!2**4"></span></li>
 
 </ol>
 
@@ -51,28 +51,28 @@
 
 <table style='width:100%'><tr><td>
 <ol>
-<li class="equals" data='{ exp:"!10**2", ans:"10^2", blank:8 }'></li>
-<li class="equals" data='{ exp:"!2**6", ans:"2^6 \\text{ or } 4^3", blank:8 }'></li>
-<li class="equals" data='{ exp:"!9**3", ans:"9^3", blank:8 }'></li>
-<li class="equals" data='{ exp:"!3**2", ans:"3^2 \\text{ or } 9^1", blank:8 }'></li>
-<li class="equals" data='{ exp:"!2**5", ans:"2^5", blank:8 }'></li>
-<li class="equals" data='{ exp:"!8**3", ans:"8^3", blank:8 }'></li>
-<li class="equals" data='{ exp:"!5**3", ans:"5^3", blank:8 }'></li>
-<li class="equals" data='{ exp:"!5**4", ans:"5^4", blank:8 }'></li>
-<li class="equals" data='{ exp:"!6**3", ans:"6^3", blank:8 }'></li>
+<li class="equation" exp="!10**2" ans="10^2" blank=8></li>
+<li class="equation" exp="!2**6"  ans="2^6 \text{ or } 4^3" blank=8></li>
+<li class="equation" exp="!9**3"  ans="9^3" blank=8></li>
+<li class="equation" exp="!3**2"  ans="3^2 \text{ or } 9^1" blank=8></li>
+<li class="equation" exp="!2**5"  ans="2^5" blank=8></li>
+<li class="equation" exp="!8**3"  ans="8^3" blank=8></li>
+<li class="equation" exp="!5**3"  ans="5^3" blank=8></li>
+<li class="equation" exp="!5**4"  ans="5^4" blank=8></li>
+<li class="equation" exp="!6**3"  ans="6^3" blank=8></li>
 </ol>
 
 </td><td>
 <ol>
-<li class="equals" data='{ exp:"!2**3", ans:"2^3", blank:8 }'></li>
-<li class="equals" data='{ exp:"!5**2", ans:"5^2", blank:8 }'></li>
-<li class="equals" data='{ exp:"!3**5", ans:"3^5", blank:8 }'></li>
-<li class="equals" data='{ exp:"!2**8", ans:"2^8 \\text{ or } 4^4", blank:8 }'></li>
-<li class="equals" data='{ exp:"!6**2", ans:"6^2", blank:8 }'></li>
-<li class="equals" data='{ exp:"!3**4", ans:"3^4 \\text{ or } 9^2", blank:8 }'></li>
-<li class="equals" data='{ exp:"!7**2", ans:"7^2", blank:8 }'></li>
-<li class="equals" data='{ exp:"!9**3", ans:"9^3", blank:8 }'></li>
-<li class="equals" data='{ exp:"!7**3", ans:"7^3", blank:8 }'></li>
+<li class="equation" exp="!2**3" ans="2^3" blank=8></li>
+<li class="equation" exp="!5**2" ans="5^2" blank=8></li>
+<li class="equation" exp="!3**5" ans="3^5" blank=8></li>
+<li class="equation" exp="!2**8" ans="2^8 \text{ or } 4^4" blank=8></li>
+<li class="equation" exp="!6**2" ans="6^2" blank=8></li>
+<li class="equation" exp="!3**4" ans="3^4 \text{ or } 9^2" blank=8></li>
+<li class="equation" exp="!7**2" ans="7^2" blank=8></li>
+<li class="equation" exp="!9**3" ans="9^3" blank=8></li>
+<li class="equation" exp="!7**3" ans="7^3" blank=8></li>
 </ol>
 
 </td></tr></table>
@@ -81,28 +81,28 @@
 
 <table style='width:100%'><tr><td>
 <ol>
-<li class="equals" data='{ exp:"6^3", ans:"!6**3" }'></li>
-<li class="equals" data='{ exp:"4^4", ans:"!4**4" }'></li>
-<li class="equals" data='{ exp:"7^3", ans:"!7**3" }'></li>
-<li class="equals" data='{ exp:"2^7", ans:"!2**7" }'></li>
-<li class="equals" data='{ exp:"2^9", ans:"!2**9" }'></li>
-<li class="equals" data='{ exp:"4^5", ans:"!4**5" }'></li>
-<li class="equals" data='{ exp:"5^5", ans:"!5**5" }'></li>
-<li class="equals" data='{ exp:"8^4", ans:"!8**4" }'></li>
-<li class="equals" data='{ exp:"5^0", ans:"!5**0" }'></li>
+<li class="equation" exp="6^3" ans="!6**3"></li>
+<li class="equation" exp="4^4" ans="!4**4"></li>
+<li class="equation" exp="7^3" ans="!7**3"></li>
+<li class="equation" exp="2^7" ans="!2**7"></li>
+<li class="equation" exp="2^9" ans="!2**9"></li>
+<li class="equation" exp="4^5" ans="!4**5"></li>
+<li class="equation" exp="5^5" ans="!5**5"></li>
+<li class="equation" exp="8^4" ans="!8**4"></li>
+<li class="equation" exp="5^0" ans="!5**0"></li>
 </ol>
 
 </td><td>
 <ol>
-<li class="equals" data='{ exp:"3^5", ans:"!3**5" }'></li>
-<li class="equals" data='{ exp:"4^6", ans:"!4**6" }'></li>
-<li class="equals" data='{ exp:"7^4", ans:"!7**4" }'></li>
-<li class="equals" data='{ exp:"5^4", ans:"!5**4" }'></li>
-<li class="equals" data='{ exp:"15^0", ans:"!15**0" }'></li>
-<li class="equals" data='{ exp:"3^6", ans:"!3**6" }'></li>
-<li class="equals" data='{ exp:"11^2", ans:"!11**2" }'></li>
-<li class="equals" data='{ exp:"9^3", ans:"!9**3" }'></li>
-<li class="equals" data='{ exp:"12^2", ans:"!12**2" }'></li>
+<li class="equation" exp="3^5"  ans="!3**5" ></li>
+<li class="equation" exp="4^6"  ans="!4**6" ></li>
+<li class="equation" exp="7^4"  ans="!7**4" ></li>
+<li class="equation" exp="5^4"  ans="!5**4" ></li>
+<li class="equation" exp="15^0" ans="!15**0"></li>
+<li class="equation" exp="3^6"  ans="!3**6" ></li>
+<li class="equation" exp="11^2" ans="!11**2"></li>
+<li class="equation" exp="9^3"  ans="!9**3" ></li>
+<li class="equation" exp="12^2" ans="!12**2"></li>
 </ol>
 
 </td></tr></table>
