expression parsing... mostly works

--- a/content/test.html
+++ b/content/test.html
@@ -30,8 +30,23 @@
 
 <p class="equals" data='{ exp:"!2**8", ans:"2^8 \\text{ or } 4^4", blank:8 }'></p>
 
-<p class="equation" exp=!2**8 ans="2^8 \text{ or } 4^4" blank=8> 
+<p class="equation" exp=!2**8 ans="2^8 \text{ or } 4^4" blank=8> </p>
 
+<p class="expression" vars="v=10;" exp="prn(v,5) = ans(v,10)" ></p>
+
+<p class="expression2" vars="a='10_5'; b='20_5';" exp="prn(a,5) + prn(b,5) = ans(a+b,10)" ></p>
+
+<p class="expression" vars="a=16; b=20; c=4;" 
+   exp="\cfrac{ (prn(a,5) + prn(b,5)) }{ prn(c,5) } = ans((a+b)/c,10)" ></p>
+
+\(  
+2 + { 4_{(2)} \over 34_{(3)}} =  
+\)
+<br>
+
+\(  
+2 + \cfrac{ 4_{(2)} } {34_{(3)}} =  
+\)
 
 <p>Example of long addition</p>
 <p>
