blank attribute to override default number of blanks

--- a/content/test.html
+++ b/content/test.html
@@ -22,7 +22,7 @@
 
 <p class="expression" exp="prn('20', 6) = @prn(20)" ></p>
 
-<p class="expression" vars="v=10;" exp="prn(v, 5) = @prn(v, 10)" ></p>
+<p class="expression" vars="v=10;" exp="prn(v, 5) = @prn(v, 10)" blank=10></p>
 
 <p class="expression" vars="a=16; b=20; c=4;" 
    exp="\cfrac{ (prn(a,5) + prn(b,5)) }{ prn(c,5) } = @prn((a+b)/c,10)" ></p>
