--- a/content/counting.html
+++ b/content/counting.html
@@ -22,38 +22,38 @@
 <ol>
 <p>We first learned to count in Base 10.</p>
 <li>Fill in this sequence: 
-  <span class="series" data='{len:10, ans:"!n", hints:[0,1,2,9] }'></span></li>
+  <span class="series" len=10 exp="@sub('$',n)" hints=[0,1,2,9] ></span></li>
 
 <p>It is called "Base 10" because there are TEN symbols, or TEN different digit "shapes".</p>
 <li>Here are five symbols (or "shapes") in Base 10:
-  <span class="series" data='{len:5, ans:"![2,3,9,7,6][n]", hints:"all"}'></span>
+  <span class="series" len=5 exp="sub('$', [2,3,9,7,6][n])" ></span>
 
 <p class="indent1"> What are the other five symbols?: 
-  <span class="series" data='{len:5, ans:"![0,1,4,5,8][n]" }'></span></p> </li>
+  <span class="series" len=5 exp="@sub('$', [0,1,4,5,8][n])" ></span></p> </li>
 
 <li>How many symbols (or "shapes") in the English Alphabet?
-  <span class="series" data='{ans:"26"}'></span></li>
+  <span class="expression" exp="@echo(26)" ></span></li>
 
 <li>In Base 10:
   <p class="indent1"> What is the largest number the can be written with one symbol?
-    <span class="series" data='{ans:"9"}'></span></p>
+    <span class="expression" exp="@echo(9)" ></span></p>
   <p class="indent1"> What is the next number after that?
-    <span class="series" data='{ans:"10"}'></span></p>
+    <span class="expression" exp="@echo(10)" ></span></p>
   <p class="indent1"> How many digits are used in this number? 
-    <span class="series" data='{ans:"2"}'></span></p>
+    <span class="expression" exp="@echo(2)" ></span></p>
 </li>
 
 <li>Write the number of digits used in each of these:
-    <p class="indent1">One hundred:
-      <span class="series" data='{ans:"3"}'></span></p>
-    <p class="indent1">Five hundred and three:
-      <span class="series" data='{ans:"3"}'></span></p>
-    <p class="indent1">Fifteen thousand two hundred and thirty:
-      <span class="series" data='{ans:"5"}'></span></p>
+    <p class="indent1"> One hundred:
+      <span class="expression" exp="@echo(3)" ></span></p>
+    <p class="indent1"> Five hundred and three:
+      <span class="expression" exp="@echo(3)" ></span></p>
+    <p class="indent1"> Fifteen thousand two hundred and thirty:
+      <span class="expression" exp="@echo(5)" ></span></p>
 </li>
 
 <li>Fill in this Base 10 sequence:
-  <p class="series indent1" data='{len:17 , ans:"!n", hints:[3,4,12,16] }'></p></li>
+  <p class="series indent1" len=17 exp="@sub('$',n)" hints=[3,4,12,16] ></p></li>
 </ol>
 
 
@@ -61,88 +61,95 @@
 
 <ol>
 <p>In Base 5, there are only FIVE symbols or "shapes".
-  They are: <span class="series"> 0, 1, 2, 3, 4 </span></p>
+  They are: <span class="series" len=5 exp="sub('$', n)" ></span></p>
 
-<li>Here are two Base 5 symbols (or "shapes"): <span class="series"> 2, 4 </span>
+<li>Here are two Base 5 symbols (or "shapes"):
+  <span class="series" len=2 exp="sub('$', [2,4][n])" ></span>
+
 <p class="indent1"> What are the other three symbols?: 
-  <span class="series" data='{len:3, ans:"![0,1,3][n]" }'></span></p></li>
+    <span class="series" len=3 exp="@sub('$', [0,1,3][n])" ></span></p></li>
 
-<li>In Base 3, there are only <span class="series" data='{ans:"3"}'></span> symbols. They are: <span class="series" data='{len:3, ans:"!n" }'></span></li> 
+<li>In Base 3, there are only <span class="expression" exp="@echo(3)" ></span> symbols. 
+  They are: <span class="series" len=3 exp="@sub('$', n)" ></span></li> 
 
-<li>In Base 8, there are only <span class="series" data='{ans:"8"}'></span> symbols. They are: <span class="series" data='{len:8, ans:"!n" }'></span></li> 
+<li>In Base 8, there are only <span class="expression" exp="@echo(8)"></span> symbols. 
+  They are: <span class="series" len=8 exp="@sub('$', n)" ></span></li> 
 
-<li>In Base 2, there are only <span class="series" data='{ans:"2"}'></span> symbols. They are: <span class="series" data='{len:2, ans:"!n" }'></span></li> 
+<li>In Base 2, there are only <span class="expression" exp="@echo(2)"></span> symbols. 
+  They are: <span class="series" len=2 exp="@sub('$', n)" ></span></li> 
 
 <li>Let's go back to Base 5. In Base 5, the largest number you can make with one digit is: 
-  <span class="series" data='{ans:"4"}'></span>.</li>
+  <span class="expression" exp="@echo(4)" ></span>.</li>
 
-<p>To write a number that is ONE MORE than 4, we have to use <span class="series" data='{ans:"2"}'></span> digits.<br>
+<p>To write a number that is ONE MORE than 4, we have to use 
+  <span class="expression" exp="@echo(2)" ></span> digits.<br>
   And that number, 4 + 1, is written like this: 10.<br>
   It looks like TEN. But it means FIVE. To know we mean Base 5, we write \( 10_{(5)} \)</p>
 
 <li>Fill in this sequence using Base 5:</li>
-<p class="series" data='{len:10, ans:"!as_ml(n,5)", hints:[1,4,6], base:5}'></p> 
+<p class="series" len=10 exp="@prn(n,5)", hints=[0,1,4,6] ></p> 
 
 <li>In Base 5, what number comes after \( 14_{(5)} \): 
-  <span class="series" data='{ans:"20_{(5)}"}'></span>.</li>
+  <span class="expression" exp="@prn('20_5', 5)" ></span>.</li>
 
 <li>Fill in this sequence using Base 5:</li>
-<p class="series" data='{len:11, ans:"!as_ml(8+n,5)", hints:[1,4,9], base:5}'></p> 
+<p class="series" len=11 exp="@prn(8+n,5)", hints=[1,4,5,9] ></p> 
 
 <li>What comes after \( 44_{(5)} \)?
-  <span class="series" data='{ans:"100_{(5)}", base:5}'></span>. Hint: think about what happens after \( 99_{(10)} \).</li>
+  <span class="expression" exp="@prn('100_5', 5)" ></span>. Hint: think about what happens after \( 99_{(10)} \).</li>
 </ol>
 
 <h2>Practice</h2>
-<ol>
 
+<p>Fill in these sequences. They all increment by 1.</p>
+
+<ol>
 <li>Fill in this sequence using Base 3:</li>
-<p class="series" data='{len:12, ans:"!as_ml(n,3)", hints:[0,4,7], base:3}'></p> 
+<p class="series" len=12 exp="@prn(n,3)" hints=[0,4,7] ></p> 
 
 <li>Fill in this sequence using Base 7:</li>
-<p class="series" data='{len:12, ans:"!as_ml(n+9,7)", hints:[2,5,9], base:7}'></p> 
+<p class="series" len=12 exp="@prn(n+9,7)" hints=[2,5,9] ></p> 
 
 <li>Fill in this sequence using Base 2:</li>
-<p class="series" data='{len:12, ans:"!as_ml(n,2)", hints:[1,5,8], base:2}'></p> 
+<p class="series" len=12 exp="@prn(n,2)" hints=[1,5,8] ></p> 
 
 <li>Fill in this sequence using Base 6:</li>
-<p class="series" data='{len:12, ans:"!as_ml(n+5,6)", hints:[1,5,8], base:6}'></p> 
+<p class="series" len=12 exp="@prn(n+5,6)" hints=[1,5,8] ></p> 
 
 <li>Fill in this sequence using Base 4:</li>
-<p class="series" data='{len:12, ans:"!as_ml(n+15,4)", hints:[5,10], base:4}'></p> 
+<p class="series" len=12 exp="@prn(n+15,4)" hints=[5,10] ></p> 
 
 <li>Fill in this sequence using Base 8:</li>
-<p class="series" data='{len:12, ans:"!as_ml(n+45,8)", hints:[2,10], base:8}'></p> 
+<p class="series" len=12 exp="@prn(n+45,8)" hints=[2,10] ></p> 
 
 <li>Fill in this sequence using Base 5:</li>
-<p class="series" data='{len:12, ans:"!as_ml(n+29,5)", hints:[2,6], base:5}'></p> 
+<p class="series" len=12 exp="@prn(n+29,5)" hints=[2,6] ></p> 
 
-<p><br>Now things get a bit harder. These sequences don't increase by 1.</p>
+<p><br>Now things get a bit harder. These sequences don't increment by 1.</p>
 
 <li>Fill in this sequence using Base 10:</li>
-<p class="series" data='{len:12, ans:"!as_ml(2*n,10)", hints:[2,4,7, 11], base:10}'></p> 
+<p class="series" len=12 exp="@prn(2*n,10)" hints=[2,4,7,11] ></p> 
 
 <li>Fill in this sequence using Base 5:</li>
-<p class="series" data='{len:12, ans:"!as_ml(2*n,5)", hints:[2,4,7, 11], base:5}'></p> 
+<p class="series" len=12 exp="@prn(2*n,5)" hints=[2,4,7,11] ></p> 
 
 <li>Fill in this sequence using Base 3:</li>
-<p class="series" data='{len:12, ans:"!as_ml(10+2*n,3)", hints:[2,4,7, 11], base:3, blank:4}'></p> 
+<p class="series" len=12 exp="@prn(10+2*n,3)" hints=[2,4,7,11] blank=6></p> 
 
 <li>Fill in this sequence using Base 4:</li>
-<p class="series" data='{len:12, ans:"!as_ml(3*n,4)", hints:[0,4,5, 11], base:4}'></p> 
+<p class="series" len=12 exp="@prn(3*n,4)" hints=[0,4,5,11] ></p> 
 
 <li>Fill in this sequence using Base 2:</li>
-<p class="series" data='{len:9, ans:"!as_ml(3*n,2)", hints:[0,3,4, 8], base:2, blank:4}'></p> 
+<p class="series" len=9 exp="@prn(3*n,2)" hints=[0,3,4,8] blank=6></p> 
 
 <li>Fill in this sequence using Base 6:</li>
-<p class="series" data='{len:12, ans:"!as_ml(3*n+6,6)", hints:[0,2,7, 11], base:6}'></p> 
+<p class="series" len=12 exp="@prn(3*n+6,6)" hints=[0,2,7,11] ></p> 
 
 <li>Fill in this sequence using Base 7:</li>
-<p class="series" data='{len:12, ans:"!as_ml(4*n,7)", hints:[2,4,7, 11], base:7}'></p> 
+<p class="series" len=12 exp="@prn(4*n,7)" hints=[2,4,7,11] ></p> 
 
 <li>Fill in this sequence using Base 5:</li>
-<p class="series" data='{len:12, ans:"!as_ml(4*n+8,5)", hints:[0, 6,8, 11], base:5}'></p> 
-
+<p class="series" len=12 exp="@prn(4*n+8,5)" hints=[0,6,8,11] ></p> 
 
 </ol>
 
