change @ decorator to _ cleaner regex and also more suggestive of a blank to be filled in

--- a/content/exponents.html
+++ b/content/exponents.html
@@ -22,9 +22,9 @@
 <p> Example: \( 4^3 \) means \( 4 \times 4 \times 4 = 64\) </p>
 
 <ol>
-<li> \( 3^2 \) means __________________ <span class="expression" exp=" = @prn(3**2)" ></span></li>
-<li> \( 2^3 \) means __________________ <span class="expression" exp=" = @prn(2**3)" ></span></li>
-<li> \( 2^4 \) means __________________ <span class="expression" exp=" = @prn(2**4)" ></span></li>
+<li> \( 3^2 \) means __________________ <span class="expression" exp=" = _prn(3**2)" ></span></li>
+<li> \( 2^3 \) means __________________ <span class="expression" exp=" = _prn(2**3)" ></span></li>
+<li> \( 2^4 \) means __________________ <span class="expression" exp=" = _prn(2**4)" ></span></li>
 </ol>
 
 <p> What does: \( 4^0 \) mean? </p>
@@ -34,15 +34,15 @@
 <h2> Practice</h2>
 <p>Fill in the series</p>
 <ol>
-<li class="expression" len=5 exp="sub('3^{$}', n) = @prn(3**n)" ></li>
-<li class="expression" len=4 exp="sub('4^{$}', n) = @prn(4**n)" ></li>
-<li class="expression" len=7 exp="sub('2^{$}', n) = @prn(2**n)" ></li>
-<li class="expression" len=4 exp="sub('5^{$}', n) = @prn(5**n)" ></li>
-<li class="expression" len=4 exp="sub('8^{$}', n) = @prn(8**n)" ></li>
-<li class="expression" len=4 exp="sub('6^{$}', n) = @prn(6**n)" ></li>
-<li class="expression" len=4 exp="sub('10^{$}',n) = @prn(10**n)" blank=5 ></li>
-<li class="expression" len=4 exp="sub('7^{$}', n) = @prn(7**n)" ></li>
-<li class="expression" len=4 exp="sub('9^{$}', n) = @prn(9**n)" ></li>
+<li class="expression" len=5 exp="sub('3^{$}', n) = _prn(3**n)" ></li>
+<li class="expression" len=4 exp="sub('4^{$}', n) = _prn(4**n)" ></li>
+<li class="expression" len=7 exp="sub('2^{$}', n) = _prn(2**n)" ></li>
+<li class="expression" len=4 exp="sub('5^{$}', n) = _prn(5**n)" ></li>
+<li class="expression" len=4 exp="sub('8^{$}', n) = _prn(8**n)" ></li>
+<li class="expression" len=4 exp="sub('6^{$}', n) = _prn(6**n)" ></li>
+<li class="expression" len=4 exp="sub('10^{$}',n) = _prn(10**n)" blank=5 ></li>
+<li class="expression" len=4 exp="sub('7^{$}', n) = _prn(7**n)" ></li>
+<li class="expression" len=4 exp="sub('9^{$}', n) = _prn(9**n)" ></li>
 </ol>
 
 <p> Write each number in the exponent form. For example: 27 = \( 3^3 \). If there is more than one correct answer, write them all.</p>
@@ -50,27 +50,27 @@
 <table style='width:100%'><tr><td>
 <ol>
 <li class="expression" exp="prn(10**2) = 10^2" ></li>
-<li class="expression" exp="prn(2**6) = @echo('2^6') \text{ or } @echo('4^3')" ></li>
-<li class="expression" exp="prn(9**3) = @echo('9^3')" ></li>
-<li class="expression" exp="prn(3**2) = @echo('3^2') \text{ or } @echo('9^1')" ></li>
-<li class="expression" exp="prn(2**5) = @echo('2^5')" ></li>
-<li class="expression" exp="prn(8**3) = @echo('8^3')" ></li>
-<li class="expression" exp="prn(5**3) = @echo('5^3')" ></li>
-<li class="expression" exp="prn(5**4) = @echo('5^4')" ></li>
-<li class="expression" exp="prn(6**3) = @echo('6^3')" ></li>
+<li class="expression" exp="prn(2**6) = _echo('2^6') \text{ or } _echo('4^3')" ></li>
+<li class="expression" exp="prn(9**3) = _echo('9^3')" ></li>
+<li class="expression" exp="prn(3**2) = _echo('3^2') \text{ or } _echo('9^1')" ></li>
+<li class="expression" exp="prn(2**5) = _echo('2^5')" ></li>
+<li class="expression" exp="prn(8**3) = _echo('8^3')" ></li>
+<li class="expression" exp="prn(5**3) = _echo('5^3')" ></li>
+<li class="expression" exp="prn(5**4) = _echo('5^4')" ></li>
+<li class="expression" exp="prn(6**3) = _echo('6^3')" ></li>
 </ol>
 
 </td><td>
 <ol>
-<li class="expression" exp="prn(2**3) = @echo('2^3')" ></li>
-<li class="expression" exp="prn(5**2) = @echo('5^2')" ></li>
-<li class="expression" exp="prn(3**5) = @echo('3^5')" ></li>
-<li class="expression" exp="prn(2**8) = @echo('2^8') \text{ or } @echo('4^4')" ></li>
-<li class="expression" exp="prn(6**2) = @echo('6^2')" ></li>
-<li class="expression" exp="prn(3**4) = @echo('3^4') \text{ or } @echo('9^2')" ></li>
-<li class="expression" exp="prn(7**2) = @echo('7^2')" ></li>
-<li class="expression" exp="prn(9**3) = @echo('9^3')" ></li>
-<li class="expression" exp="prn(7**3) = @echo('7^3')" ></li>
+<li class="expression" exp="prn(2**3) = _echo('2^3')" ></li>
+<li class="expression" exp="prn(5**2) = _echo('5^2')" ></li>
+<li class="expression" exp="prn(3**5) = _echo('3^5')" ></li>
+<li class="expression" exp="prn(2**8) = _echo('2^8') \text{ or } _echo('4^4')" ></li>
+<li class="expression" exp="prn(6**2) = _echo('6^2')" ></li>
+<li class="expression" exp="prn(3**4) = _echo('3^4') \text{ or } _echo('9^2')" ></li>
+<li class="expression" exp="prn(7**2) = _echo('7^2')" ></li>
+<li class="expression" exp="prn(9**3) = _echo('9^3')" ></li>
+<li class="expression" exp="prn(7**3) = _echo('7^3')" ></li>
 </ol>
 
 </td></tr></table>
@@ -79,28 +79,28 @@
 
 <table style='width:100%'><tr><td>
 <ol>
-<li class="expression" exp="6^3 = @prn(6**3)"></li>
-<li class="expression" exp="4^4 = @prn(4**4)"></li>
-<li class="expression" exp="7^3 = @prn(7**3)"></li>
-<li class="expression" exp="2^7 = @prn(2**7)"></li>
-<li class="expression" exp="2^9 = @prn(2**9)"></li>
-<li class="expression" exp="4^5 = @prn(4**5)"></li>
-<li class="expression" exp="5^5 = @prn(5**5)"></li>
-<li class="expression" exp="8^4 = @prn(8**4)"></li>
-<li class="expression" exp="5^0 = @prn(5**0)"></li>
+<li class="expression" exp="6^3 = _prn(6**3)"></li>
+<li class="expression" exp="4^4 = _prn(4**4)"></li>
+<li class="expression" exp="7^3 = _prn(7**3)"></li>
+<li class="expression" exp="2^7 = _prn(2**7)"></li>
+<li class="expression" exp="2^9 = _prn(2**9)"></li>
+<li class="expression" exp="4^5 = _prn(4**5)"></li>
+<li class="expression" exp="5^5 = _prn(5**5)"></li>
+<li class="expression" exp="8^4 = _prn(8**4)"></li>
+<li class="expression" exp="5^0 = _prn(5**0)"></li>
 </ol>
 
 </td><td>
 <ol>
-<li class="expression" exp="3^5 = @prn(3**5)" ></li>
-<li class="expression" exp="4^6 = @prn(4**6)" ></li>
-<li class="expression" exp="7^4 = @prn(7**4)" ></li>
-<li class="expression" exp="5^4 = @prn(5**4)" ></li>
-<li class="expression" exp="15^0 = @prn(15**0)" ></li>
-<li class="expression" exp="3^6 = @prn(3**6)" ></li>
-<li class="expression" exp="11^2 = @prn(11**2)" ></li>
-<li class="expression" exp="9^3 = @prn(9**3)" ></li>
-<li class="expression" exp="12^2 = @prn(12**2)" ></li>
+<li class="expression" exp="3^5 = _prn(3**5)" ></li>
+<li class="expression" exp="4^6 = _prn(4**6)" ></li>
+<li class="expression" exp="7^4 = _prn(7**4)" ></li>
+<li class="expression" exp="5^4 = _prn(5**4)" ></li>
+<li class="expression" exp="15^0 = _prn(15**0)" ></li>
+<li class="expression" exp="3^6 = _prn(3**6)" ></li>
+<li class="expression" exp="11^2 = _prn(11**2)" ></li>
+<li class="expression" exp="9^3 = _prn(9**3)" ></li>
+<li class="expression" exp="12^2 = _prn(12**2)" ></li>
 </ol>
 
 </td></tr></table>
