--- a/content/counting.html
+++ b/content/counting.html
@@ -22,38 +22,38 @@
 <ol>
 <p>We first learned to count in Base 10.</p>
 <li>Fill in this sequence: 
-  <span class="expression" len=10 exp="@sub('$',n)" hints=[0,1,2,9] ></span></li>
+  <span class="expression" len=10 exp="_sub('$',n)" hints=[0,1,2,9] ></span></li>
 
 <p>It is called "Base 10" because there are TEN symbols, or TEN different digit "shapes".</p>
 <li>Here are five symbols (or "shapes") in Base 10:
   <span class="expression" len=5 exp="sub('$', [2,3,9,7,6][n])" ></span>
 
 <p class="indent1"> What are the other five symbols?: 
-  <span class="expression" len=5 exp="@sub('$', [0,1,4,5,8][n])" ></span></p> </li>
+  <span class="expression" len=5 exp="_sub('$', [0,1,4,5,8][n])" ></span></p> </li>
 
 <li>How many symbols (or "shapes") in the English Alphabet?
-  <span class="expression" exp="@echo(26)" ></span></li>
+  <span class="expression" exp="_echo(26)" ></span></li>
 
 <li>In Base 10:
   <p class="indent1"> What is the largest number the can be written with one symbol?
-    <span class="expression" exp="@echo(9)" ></span></p>
+    <span class="expression" exp="_echo(9)" ></span></p>
   <p class="indent1"> What is the next number after that?
-    <span class="expression" exp="@echo(10)" ></span></p>
+    <span class="expression" exp="_echo(10)" ></span></p>
   <p class="indent1"> How many digits are used in this number? 
-    <span class="expression" exp="@echo(2)" ></span></p>
+    <span class="expression" exp="_echo(2)" ></span></p>
 </li>
 
 <li>Write the number of digits used in each of these:
     <p class="indent1"> One hundred:
-      <span class="expression" exp="@echo(3)" ></span></p>
+      <span class="expression" exp="_echo(3)" ></span></p>
     <p class="indent1"> Five hundred and three:
-      <span class="expression" exp="@echo(3)" ></span></p>
+      <span class="expression" exp="_echo(3)" ></span></p>
     <p class="indent1"> Fifteen thousand two hundred and thirty:
-      <span class="expression" exp="@echo(5)" ></span></p>
+      <span class="expression" exp="_echo(5)" ></span></p>
 </li>
 
 <li>Fill in this Base 10 sequence:
-  <p class="series indent1" len=17 exp="@sub('$',n)" hints=[3,4,12,16] ></p></li>
+  <p class="series indent1" len=17 exp="_sub('$',n)" hints=[3,4,12,16] ></p></li>
 </ol>
 
 
@@ -67,36 +67,36 @@
   <span class="expression" len=2 exp="sub('$', [2,4][n])" ></span>
 
 <p class="indent1"> What are the other three symbols?: 
-    <span class="expression" len=3 exp="@sub('$', [0,1,3][n])" ></span></p></li>
+    <span class="expression" len=3 exp="_sub('$', [0,1,3][n])" ></span></p></li>
 
-<li>In Base 3, there are only <span class="expression" exp="@echo(3)" ></span> symbols. 
-  They are: <span class="expression" len=3 exp="@sub('$', n)" ></span></li> 
+<li>In Base 3, there are only <span class="expression" exp="_echo(3)" ></span> symbols. 
+  They are: <span class="expression" len=3 exp="_sub('$', n)" ></span></li> 
 
-<li>In Base 8, there are only <span class="expression" exp="@echo(8)"></span> symbols. 
-  They are: <span class="expression" len=8 exp="@sub('$', n)" ></span></li> 
+<li>In Base 8, there are only <span class="expression" exp="_echo(8)"></span> symbols. 
+  They are: <span class="expression" len=8 exp="_sub('$', n)" ></span></li> 
 
-<li>In Base 2, there are only <span class="expression" exp="@echo(2)"></span> symbols. 
-  They are: <span class="expression" len=2 exp="@sub('$', n)" ></span></li> 
+<li>In Base 2, there are only <span class="expression" exp="_echo(2)"></span> symbols. 
+  They are: <span class="expression" len=2 exp="_sub('$', n)" ></span></li> 
 
 <li>Let's go back to Base 5. In Base 5, the largest number you can make with one digit is: 
-  <span class="expression" exp="@echo(4)" ></span>.</li>
+  <span class="expression" exp="_echo(4)" ></span>.</li>
 
 <p>To write a number that is ONE MORE than 4, we have to use 
-  <span class="expression" exp="@echo(2)" ></span> digits.<br>
+  <span class="expression" exp="_echo(2)" ></span> digits.<br>
   And that number, 4 + 1, is written like this: 10.<br>
   It looks like TEN. But it means FIVE. To know we mean Base 5, we write \( 10_{(5)} \)</p>
 
 <li>Fill in this sequence using Base 5:</li>
-<p class="expression" len=10 exp="@prn(n,5)", hints=[0,1,4,6] ></p> 
+<p class="expression" len=10 exp="_prn(n,5)", hints=[0,1,4,6] ></p> 
 
 <li>In Base 5, what number comes after \( 14_{(5)} \): 
-  <span class="expression" exp="@prn('20_5', 5)" ></span>.</li>
+  <span class="expression" exp="_prn('20_5', 5)" ></span>.</li>
 
 <li>Fill in this sequence using Base 5:</li>
-<p class="expression" len=11 exp="@prn(8+n,5)", hints=[1,4,5,9] ></p> 
+<p class="expression" len=11 exp="_prn(8+n,5)", hints=[1,4,5,9] ></p> 
 
 <li>What comes after \( 44_{(5)} \)?
-  <span class="expression" exp="@prn('100_5', 5)" ></span>. 
+  <span class="expression" exp="_prn('100_5', 5)" ></span>. 
   Hint: think about what happens after \( 99_{(10)} \).</li>
 </ol>
 
@@ -106,51 +106,51 @@
 
 <ol>
 <li>Fill in this sequence using Base 3:</li>
-<p class="expression" len=12 exp="@prn(n,3)" hints=[0,4,7] ></p> 
+<p class="expression" len=12 exp="_prn(n,3)" hints=[0,4,7] ></p> 
 
 <li>Fill in this sequence using Base 7:</li>
-<p class="expression" len=12 exp="@prn(n+9,7)" hints=[2,5,9] ></p> 
+<p class="expression" len=12 exp="_prn(n+9,7)" hints=[2,5,9] ></p> 
 
 <li>Fill in this sequence using Base 2:</li>
-<p class="expression" len=12 exp="@prn(n,2)" hints=[1,5,8] ></p> 
+<p class="expression" len=12 exp="_prn(n,2)" hints=[1,5,8] ></p> 
 
 <li>Fill in this sequence using Base 6:</li>
-<p class="expression" len=12 exp="@prn(n+5,6)" hints=[1,5,8] ></p> 
+<p class="expression" len=12 exp="_prn(n+5,6)" hints=[1,5,8] ></p> 
 
 <li>Fill in this sequence using Base 4:</li>
-<p class="expression" len=12 exp="@prn(n+15,4)" hints=[5,10] ></p> 
+<p class="expression" len=12 exp="_prn(n+15,4)" hints=[5,10] ></p> 
 
 <li>Fill in this sequence using Base 8:</li>
-<p class="expression" len=12 exp="@prn(n+45,8)" hints=[2,10] ></p> 
+<p class="expression" len=12 exp="_prn(n+45,8)" hints=[2,10] ></p> 
 
 <li>Fill in this sequence using Base 5:</li>
-<p class="expression" len=12 exp="@prn(n+29,5)" hints=[2,6] ></p> 
+<p class="expression" len=12 exp="_prn(n+29,5)" hints=[2,6] ></p> 
 
 <p><br>Now things get a bit harder. These sequences increment by more than 1.</p>
 
 <li>Fill in this sequence using Base 10:</li>
-<p class="expression" len=12 exp="@prn(2*n,10)" hints=[2,4,7,11] ></p> 
+<p class="expression" len=12 exp="_prn(2*n,10)" hints=[2,4,7,11] ></p> 
 
 <li>Fill in this sequence using Base 5:</li>
-<p class="expression" len=12 exp="@prn(2*n,5)" hints=[2,4,7,11] ></p> 
+<p class="expression" len=12 exp="_prn(2*n,5)" hints=[2,4,7,11] ></p> 
 
 <li>Fill in this sequence using Base 3:</li>
-<p class="expression" len=12 exp="@prn(10+2*n,3)" hints=[2,4,7,11] blank=6></p> 
+<p class="expression" len=12 exp="_prn(10+2*n,3)" hints=[2,4,7,11] blank=6></p> 
 
 <li>Fill in this sequence using Base 4:</li>
-<p class="expression" len=12 exp="@prn(3*n,4)" hints=[0,4,5,11] ></p> 
+<p class="expression" len=12 exp="_prn(3*n,4)" hints=[0,4,5,11] ></p> 
 
 <li>Fill in this sequence using Base 2:</li>
-<p class="expression" len=9 exp="@prn(3*n,2)" hints=[0,3,4,8] blank=6></p> 
+<p class="expression" len=9 exp="_prn(3*n,2)" hints=[0,3,4,8] blank=6></p> 
 
 <li>Fill in this sequence using Base 6:</li>
-<p class="expression" len=12 exp="@prn(3*n+6,6)" hints=[0,2,7,11] ></p> 
+<p class="expression" len=12 exp="_prn(3*n+6,6)" hints=[0,2,7,11] ></p> 
 
 <li>Fill in this sequence using Base 7:</li>
-<p class="expression" len=12 exp="@prn(4*n,7)" hints=[2,4,7,11] ></p> 
+<p class="expression" len=12 exp="_prn(4*n,7)" hints=[2,4,7,11] ></p> 
 
 <li>Fill in this sequence using Base 5:</li>
-<p class="expression" len=12 exp="@prn(4*n+8,5)" hints=[0,6,8,11] ></p> 
+<p class="expression" len=12 exp="_prn(4*n+8,5)" hints=[0,6,8,11] ></p> 
 
 </ol>
 
