change base-chart to use attributes instead of data json

--- a/content/test.html
+++ b/content/test.html
@@ -39,6 +39,9 @@
 
 <p class="expression" exp="prn(2**8) = _echo('2^8') \text{ or } _echo('4^4')"></p>
 
+<table class="base-chart" num=212_3 top=both > </table>
+
+<table class="base-chart" num=213_4 top=both bottom=answer > </table>
 
 
 \(  
