added a bunch of base10 practice problems

--- a/content/tobase10.html
+++ b/content/tobase10.html
@@ -75,8 +75,34 @@
 </ol>
 
 <h2>More Practice</h2>
+<p>Convert to Base 10</p>
+
 <ol>
-<li class="expression" exp="prn(55, 7) = _prn(55,10)" ></li>
+<li class="expression" exp="prn(55, 7) = _prn(55, 10)" ></li>
+<li class="expression" exp="prn(80, 4) = _prn(80, 10)" ></li>
+<li class="expression" exp="prn(99, 6) = _prn(99, 10)" ></li>
+<li class="expression" exp="prn(45, 2) = _prn(45, 10)" ></li>
+<li class="expression" exp="prn(100, 9) = _prn(100, 10)" ></li>
+<li class="expression" exp="prn(100, 3) = _prn(100, 10)" ></li>
+<li class="expression" exp="prn(100, 5) = _prn(100, 10)" ></li>
+<li class="expression" exp="prn(100, 4) = _prn(100, 10)" ></li>
+<li class="expression" exp="prn(78, 8) = _prn(78, 10)" ></li>
+<li class="expression" exp="prn(53, 2) = _prn(52, 10)" ></li>
+</ol>
+
+<p>Convert to Base 10. These are a bit harder.</p>
+
+<ol>
+<li class="expression" exp="prn(484, 6) = _prn(484, 10)" ></li>
+<li class="expression" exp="prn(393, 3) = _prn(393, 10)" ></li>
+<li class="expression" exp="prn(727, 9) = _prn(747, 10)" ></li>
+<li class="expression" exp="prn(626, 8) = _prn(45, 10)" ></li>
+<li class="expression" exp="prn(323, 2) = _prn(323, 10)" ></li>
+<li class="expression" exp="prn(505, 7) = _prn(505, 10)" ></li>
+<li class="expression" exp="prn(222, 3) = _prn(222, 10)" ></li>
+<li class="expression" exp="prn(606, 5) = _prn(606, 10)" ></li>
+<li class="expression" exp="prn(474, 4) = _prn(474, 10)" ></li>
+<li class="expression" exp="prn(2882, 10) = _prn(2882, 10)" ></li>
 </ol>
 
 </div>
