--- a/content/tobase10.html
+++ b/content/tobase10.html
@@ -75,7 +75,7 @@
 </ol>
 
 <h2>More Practice</h2>
-<p>Convert to Base 10</p>
+<p>Convert to Base 10.</p>
 
 <ol>
 <li class="expression" exp="prn(55, 7) = _prn(55, 10)" ></li>
