test addition carry rule

--- a/content/test.html
+++ b/content/test.html
@@ -68,6 +68,14 @@
 \begin{align} 124  \\ \underline{+ \quad 53}  \\ 177  \end{align}
 \)
 
+
+\( \begin{align} 
+   1 \phantom{00}  \\
+  124  \\ 
+  \underline{+ \quad 53}  \\ 
+  177  
+\end{align} \)
+
 </p>
 
 <p>Example of Long Division</p>
