added some challenge problems

--- a/content/addition.html
+++ b/content/addition.html
@@ -35,7 +35,8 @@ In other Bases, the easy problems are exactly the same:
 <p class="expression indent1" exp="prn(3, 5) + prn(3, 5) = ?"></p>
 <p>There is no "6" in Base 5. So the answer must be \( 11_{(5)} \).</p>
 
-<p>Here is a two digit Base 5 addition, where you "carry the one" from the \( 11_{(5)} \).</p>
+<p>Here is a two digit Base 5 addition, where you "carry the one" from the 
+    \( 3_{(5)} + 3_{(5)} = 11_{(5)} \).</p>
 <p class="indent1">
 \( \begin{align} 1 \phantom{0_{(5)}} \\ 13_{(5)} \\ \underline{+ \quad 23_{(5)}} \\ 41_{(5)} \end{align} \)
 </p>
@@ -79,6 +80,17 @@ In other Bases, the easy problems are exactly the same:
 </tr></table>
 
 <h2>Challenge Problems</h2>
+
+<table style='width:100%'><tr>
+<td><p class="expression" exp="longadd([17, 43, 67], 6)"></p></td>
+<td><p class="expression" exp="longadd([20, 40, 60], 7)"></p></td>
+<td><p class="expression" exp="longadd([17, 43, 77], 4)"></p></td>
+</tr><tr>
+<td><p class="expression" exp="longadd([17, 29, 34, 48], 5)"></p></td>
+<td><p class="expression" exp="longadd([17, 29, 34, 48], 9)"></p></td>
+<td><p class="expression" exp="longadd([15, 17, 29, 30], 2)"></p></td>
+</tr></table>
+
 
 </div>
 </body>
