base_chart: demo flag (means do not show solution). bottom uses letters dps for digits, products, sum. New number format for ParseBaseNum  17:5 means 17_10 in base 5

--- a/content/test.html
+++ b/content/test.html
@@ -20,6 +20,8 @@
 
 <p>Test Cases</p>
 
+<table class="base-chart" num=89:5 top=both bottom=dp></table>
+
 <p class="expression" exp="prn(20, 6) = _prn(20)" ></p>
 
 <p class="expression" vars="v=10;" exp="prn(v, 5) = _prn(v, 10)" blank=10></p>
