--- a/content/tobase10.html
+++ b/content/tobase10.html
@@ -23,19 +23,19 @@
 
 <p><strong>Step1:</strong> Draw a "Base 4 Conversion Table" with exponents on top.<br>
     In this case, we make 3 columns because \( 213_{(4)} \) is a 3-digit number.</p>
-<table class="base-chart"  num=213_4 top=exponents ></table>
+<table class="base-chart" demo=true num=213_4 top=exponents ></table>
 
 <p><strong>Step2:</strong> Calculate the exponents. These are the <em>place values</em> . </p>
-<table class="base-chart"  num=213_4 top=both ></table>
+<table class="base-chart" demo=true num=213_4 top=both ></table>
 
 <p><strong>Step3:</strong> Put in the digits of the number. In this example they are 2, 1, and 3. </p>
-<table class="base-chart"  num=213_4 top=both bottom=digits ></table>
+<table class="base-chart" demo=true num=213_4 top=both bottom=d ></table>
 
 <p><strong>Step4:</strong> Multiply each digit by its place value.</p>
-<table class="base-chart"  num=213_4 top=both bottom=products ></table>
+<table class="base-chart" demo=true num=213_4 top=both bottom=dp ></table>
 
 <p><strong>Step5:</strong> Add these products together.</p>
-<table class="base-chart"  num=213_4 top=both bottom=answer ></table>
+<table class="base-chart" demo=true num=213_4 top=both bottom=dps ></table>
 
 <p>The answer in Base 10 is: 39.</p>
 <p>Or: \( 213_{(4)} = 39_{(10)}  \)</p>
